# cmakeISample

./: .gitignore  CMakeLists.txt  README.md
CommonFramework/: CMakeLists.txt  module.modulemap
CommonFramework/include/: Common.h
CommonFramework/src/: Common.mm  CommonCClass.cpp  CommonCClass.h  Common_Internal.h
MyApp/: CMakeLists.txt
MyApp/src/: AppDelegate.swift  ViewController.swift
MyFramework/: CMakeLists.txt  module.modulemap
MyFramework/include/: MyFramework.h  MyObjcClass.h
MyFramework/src/: MyClass.cpp  MyClass.h  MyObjcClass.mm  MyObjcClass_Internal.h
